--- a/SomeGame/style.css
+++ b/SomeGame/style.css
@@ -1,6 +1,11 @@
 #playerDiv {
-    border: 1px solid black;
+    border: 1px solid white;
 }
 #barDiv {
-    border: 1px solid black;
+    border: 1px solid white;
+}
+
+* {
+    background-color: black;
+    color: white;
 }
