--- a/SomeGame/style.css
+++ b/SomeGame/style.css
@@ -1,9 +1,25 @@
 #playerDiv {
     border: 1px solid white;
+    
 }
 #barDiv {
     border: 1px solid white;
 }
+
+#weaponsDiv {
+    border: 1px solid white;
+    float: right;
+    width: 48%; 
+    padding: 5px;
+}
+
+#stats {
+    float: left;
+    width: 48%; 
+    padding: 5px;
+}
+
+
 
 * {
     background-color: #202020;
